# drf-api-permissions-postgres

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
drf_api_permissions_postgres/: settings.py  urls.py
hot_100s/: admin.py  apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
hot_100s/migrations/: 0001_initial.py
